--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,138 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@700');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@800');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@900');
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font: normal normal bold nunito;
+  font-weight: 500;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+img {
+  max-width: 100%;
+}
+
+h4 {
+  font-size: 15px;
+}
+
+p {
+  font-size: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.wrapper {
+  text-align: center;
+  margin: auto;
+
+}
+
+.wrapper>h3 {
+  margin: 30px 0;
+}
+
+.header {
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  box-shadow: 0px 0px 10px #1B1C201A;
+  opacity: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px
+}
+
+.header>img {
+  max-width: 100px;
+}
+
+.activities {
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.singleActivity {
+  position: relative;
+  max-width: 200px;
+  max-height: 400px;
+  text-align: center;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  box-shadow: 0px 10px 15px #1B1C201A;
+  border-radius: 15px;
+  opacity: 1;
+}
+
+.logoDiv {
+  position: relative;
+  top: -30px;
+  left: 65px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  box-shadow: 0px 10px 30px #42596529;
+  opacity: 1;
+
+}
+
+.scheduleScreen {
+  background-color: #344856;
+  height: 100vh;
+  width: 100vw;
+  color: #FFFFFF;
+  text-align: center;
+  margin: auto;
+
+}
+
+.schedulePics {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+
+}
+
+.schedulePicOutline {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.schedulePic {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+
+.schedulePic>img {
+  width: 35px;
+  height: 35px;
+}
+input{
+  max-width: 70%;
+}
+
+@media screen and (max-width: 1000px) {
+
+  .singleActivity {
+    width: 136px;
+    height: 182px;
+
+  }
 }
